@@ -29,6 +29,8 @@ python-defaults (2.7.2-2) UNRELEASED; urgency=low
       python:Breaks - closes: 631397, describes .pyinstall and .pyremove files)
     - remove setuptools from requires.txt (it is replaced with
       python-pkg-resources Debian dependency)
+    - "--namespace foo" no longer triggers .../dist-packages/bar/foo/__init__.py
+      creation, use "--namespace bar.foo" instead
 
  -- Piotr Ożarowski <piotr@debian.org>  Sun, 12 Jun 2011 13:28:48 +0200
 
